# polis

./: .gitignore  .pre-commit-config.yaml  mypy.ini
.github/workflows/: codinsight.yaml  release.yaml  test.yaml
codinsight/: README.md  main.py  pyproject.toml
codinsight/scripts/benchmarks/: ast_optimization_bench.py
codinsight/src/code_insight/: __init__.py  core.py  multi_analysis.py
codinsight/src/code_insight/code_analysis/: __init__.py  abstract.py  algorithm.py  complexity.py  quality.py  readability.py  redundancy.py  struct.py  style.py
codinsight/src/code_insight/trend_analysis/: __init__.py  trend_analysis.py
codinsight/tests/code_insight/: test_config.py  test_core.py  test_core_readability.py  test_multi_analysis.py  test_trend_analysis.py
codinsight/tests/code_insight/code_analysis/: test_algorithm.py  test_complexity.py  test_quality.py  test_readability.py  test_redundancy.py  test_security.py  test_struct.py  test_style.py
